--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -9,10 +9,8 @@ on:
 
 env:
   REGISTRY: hub.docker.com
-  DOCKER_HUB_REPO: "orangehrm/orangehrm-environment-images"
-  TAG_NAME: "prod-php-7.4-ubuntu20.04"
-  VERSION_TAG_NAME: "prod-php-7.4-ubuntu20.04"
-  #LATEST_TAG_NAME: "prod-php-latest-ubuntu-20.04" 
+  DOCKER_HUB_REPO: "orangehrm/prod-environment"
+  LATEST_TAG_NAME: "php-8.3-latest"
   UPSTREAM_REPO: "orangehrm/orangehrm-prod-environment"
   UPSTREAM_BRANCH: "refs/heads/php-8.3-ubuntu-24.04"
 
@@ -36,7 +34,7 @@ jobs:
         run: composer install
 
       - name: Build docker image
-        run: docker build -t ${{ env.DOCKER_HUB_REPO }}:${{ env.TAG_NAME }} docker-image
+        run: docker build -t ${{ env.DOCKER_HUB_REPO }}:${{ env.LATEST_TAG_NAME }} docker-image
 
       - name: Spin up the container
         run: |
