--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -46,13 +46,21 @@ jobs:
           sleep 10s
           php vendor/bin/codecept run unit
 
-    #   - name: Get installed php version
-    #     run: echo "VERSION_TAG_NAME=prod-php-$(docker exec prod_web_ubuntu php -r 'echo PHP_VERSION;')-ubuntu-20.04" >> $GITHUB_ENV
+      - name: Get installed php version
+        run: echo "PHP_VERSION=php$(docker exec $(docker ps --format '{{.Names}}' | head -n 1) php -r 'echo PHP_VERSION;')" >> $GITHUB_ENV
 
-    #   - name: New image with a version tag & latest tag
-    #     run: |
-    #       docker tag ${{ env.DOCKER_HUB_REPO }}:${{ env.TAG_NAME }} ${{ env.DOCKER_HUB_REPO }}:${{ env.VERSION_TAG_NAME }}
-    #     docker tag ${{ env.DOCKER_HUB_REPO }}:${{ env.TAG_NAME }} ${{ env.DOCKER_HUB_REPO }}:${{ env.LATEST_TAG_NAME }}
+      - name: Set TAG_NAME with date
+        run: |
+          CURRENT_DATE=$(date +'%d%m%y')
+          echo VERSION_TAG_NAME="${{ env.PHP_VERSION }}-${CURRENT_DATE}" >> $GITHUB_ENV
+
+      - name: Copy the report file
+        run: |
+            docker cp $(docker ps --format '{{.Names}}' | head -n 1):/var/log/installed_packages_detailed_report.txt  installed_packages_detailed_report.txt
+
+      - name: New image with a version tag & latest tag
+        run: |
+          docker tag ${{ env.DOCKER_HUB_REPO }}:${{ env.LATEST_TAG_NAME }} ${{ env.DOCKER_HUB_REPO }}:${{ env.VERSION_TAG_NAME }}
 
       - name: Docker hub login
         if: ${{ github.repository == env.UPSTREAM_REPO && github.ref == env.UPSTREAM_BRANCH }}
