Updated recipients and added attachments

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -97,6 +97,6 @@ jobs:
           # email body as text
           body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           # comma-separated string, send email to
-          to: techops@orangehrm.com
+          to: ${{ vars.EMAIL_RECIPIENTS }}
           # from email name
           from: DockHRM Automator
