Added attachements to the email

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -100,3 +100,4 @@ jobs:
           to: ${{ vars.EMAIL_RECIPIENTS }}
           # from email name
           from: DockHRM Automator
+          attachments : installed_packages_detailed_report.txt
