--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    image: orangehrm/orangehrm-environment-images:prod-php-7.4-ubuntu20.04
+    image: orangehrm/prod-environment:php-8.3-latest
     ports:
       - "443:443"
     volumes:
