Revert "Updated email content"
This reverts commit 0a705009dcad948e490cece9c36f91eadb280777.

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -93,9 +93,9 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           # email subject
-          subject: GitHub Workflow of ${{ github.repository }}/php-8.3-ubuntu-24.04 - ${{ job.status }}
+          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
           # email body as text
-          body: ${{ github.workflow }} status - ${{ job.status }}
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           # comma-separated string, send email to
           to: ${{ vars.EMAIL_RECIPIENTS }}
           # from email name
