--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -10,9 +10,10 @@ on:
 env:
   REGISTRY: hub.docker.com
   DOCKER_HUB_REPO: "orangehrm/prod-environment"
-  LATEST_TAG_NAME: "php-8.3-latest"
+  LATEST_TAG_NAME: "ubuntu24.04-php8.3-latest"
   UPSTREAM_REPO: "orangehrm/orangehrm-prod-environment"
   UPSTREAM_BRANCH: "refs/heads/php-8.3-ubuntu-24.04"
+  OS_VERSION: "ubuntu24.04"
 
 jobs:
 
@@ -47,7 +48,7 @@ jobs:
           php vendor/bin/codecept run unit
 
       - name: Get installed php version
-        run: echo "PHP_VERSION=php$(docker exec $(docker ps --format '{{.Names}}' | head -n 1) php -r 'echo PHP_VERSION;')" >> $GITHUB_ENV
+        run: echo "PHP_VERSION=${{ env.OS_VERSION }}-php$(docker exec $(docker ps --format '{{.Names}}' | head -n 1) php -r 'echo PHP_VERSION;')" >> $GITHUB_ENV
 
       - name: Set TAG_NAME with date
         run: |
