--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -9,10 +9,11 @@ on:
 
 env:
   REGISTRY: hub.docker.com
-  DOCKER_HUB_REPO: "orangehrm/prod-environment-redhat9"
-  LATEST_TAG_NAME: "php-8.2-latest"
+  DOCKER_HUB_REPO: "orangehrm/prod-environment"
+  LATEST_TAG_NAME: "rhel9-php8.2-latest"
   UPSTREAM_REPO: "orangehrm/orangehrm-prod-environment"
   UPSTREAM_BRANCH: "refs/heads/php-8.2-rhel-9"
+  OS_VERSION: "rhel9"
 
 jobs:
 
@@ -44,7 +45,7 @@ jobs:
           docker ps -a
 
       - name: Get installed php version
-        run: echo "PHP_VERSION=php-$(docker exec $(docker ps --format '{{.Names}}' | head -n 1) php -r 'echo PHP_VERSION;')" >> $GITHUB_ENV
+        run: echo "PHP_VERSION=${{ env.OS_VERSION }}-php$(docker exec $(docker ps --format '{{.Names}}' | head -n 1) php -r 'echo PHP_VERSION;')" >> $GITHUB_ENV
   
       - name: Set TAG_NAME with date
         run: |
